2008-10-14 Raphael Neider <rneider AT web.de>

	* device/lib/pic16/libdev/Makefile.am,
	  device/lib/pic16/libio/Makefile.am: enable building libraries for
	  18f2321, 18f4321, 18f2523, 18f4620, 18f66j60, 18f66j65, 18f67j60,
	  18f86j60, 18f86j65, 18f87j60, 18f96j60, 18f96j65, and 18f97j60
	* device/lib/pic16/libdev/Makefile.in,
	  device/lib/pic16/libio/Makefile.in: regenerated

2008-10-14 Raphael Neider <rneider AT web.de>

	* device/include/pic16/pic18f2450.h,
	  device/include/pic16/pic18f4450.h,
	  device/lib/pic16/libdev/pic18f2450.c,
	  device/lib/pic16/libdev/pic18f4450.c,
	  device/include/pic16/adc.h,
	  device/include/pic16/pic16devices.txt,
	  device/include/pic16/pic18fregs.h,
	  device/lib/pic16/libdev/Makefile.am,
	  device/lib/pic16/libdev/Makefile.in,
	  device/lib/pic16/libio/Makefile.am,
	  device/lib/pic16/libio/Makefile.in,
	  device/lib/pic16/pics.all: added 18f2450 and 18f4450, closes #1844525

	* device/lib/pic16/libsdcc/stack/stack.S: there is no need to pin the
	  stack to a fixed location, relax it to automatically work with all
	  but the smallest devices (256 byte RAM devices need #pragma stack)

2008-10-09 Maarten Brock <sourceforge.brock AT dse.nl>

	* debugger/mcs51/break.c: bugfix from patch 1989966, thanks Risto Huotari
	* debugger/mcs51/simi.c: bugfix from patch 1989972, thanks Risto Huotari
	* device/lib/_strcspn.c: fixed bug 2140931

2008-10-06 Raphael Neider <rneider AT web.de>

	* device/include/pic16/stdio.h,
	  device/lib/pic16/libc/stdio/putchar.c: putchar should not be
	  declared __naked for convenience, named all arguments
	* device/lib/pic16/libc/stdio/strmgpsim.c,
	  device/lib/pic16/libc/stdio/strmmssp.c,
	  device/lib/pic16/libc/stdio/strmusart.c: cosmetic changes

	* src/pic16/pcode.c (createReachingDefinitions): avoid segfault on
	  empty __naked functions,
	* (pCodeLabelDestruct, pic16_unlinkpCode, pic16_pCodeUnlink): fix
	  corner cases (unlink first/last pCode in list), reuse more code
